--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -73,7 +73,7 @@ Hammerhead PMB 2520 AGPS from Global Locate.
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
 * Externally-accessible GPS antenna connector of type MMCX
 
-The binary driver is available - see [[GLLIN]]. 
+The binary driver is available - see [[gllin]]. 
 Efforts to reverse engineer the protocol are partially detailed in [[Hammerhead/Protocol]], these have stalled since the announcement that [[FreeRunner]] will use a different GPS.
 
 === microSD-Card ===
