--- a/Hammerhead%2FProtocol.mw
+++ b/Hammerhead%2FProtocol.mw
@@ -1,3 +1,7 @@
+Hammerhead is the GPS receiver chip used in the Neo 1973. The only way currently to use it is via a closed-source binary program. This page describes efforts to write an open source driver. (Mostly abandoned since the release of the Neo Freerunner which uses a different chipsset) 
+
+== Repository ==
+
 We have set up a SCM repository for experimental code and documentation at http://projects.linuxtogo.org/projects/sphyrna.
 
 [[User:mmontour]] has created a quick and dirty gtk program called 'satscan' which performs the first steps of a cold-start acquisition. It scans through the satellite numbers 8 at a time in several different frequency bands, and displays a symbol on the screen indicating the strength of each signal. The program (which includes portions of 'hhtest.c') is available here: [http://members.shaw.ca/mmontour/satscan/]. Description/screenshots are  
