--- a/Getting_GPS_console_output_with_gllin.mw
+++ b/Getting_GPS_console_output_with_gllin.mw
@@ -1,6 +1,10 @@
-This article describes the "quick start" procedure allowing to see the first output and actually use the GPS device in the command line mode, using the [[gllin]] driver.
+[[gllin]] is the driver used to access GPS data in the Neo 1973. If you have a Freerunner you don't need to look at this page.
 
-After you download, scp and install the gllin_1.0+r350-r0_fic-gta01.ipk (or similar), it creates the folder 'gllin' in the root home. This folder contains the executable with the same name which starts the driver.
+== How to see gllin output ==
+
+This page describes the "quick start" procedure allowing to see the first output and actually use the GPS device in the command line mode, using the [[gllin]] driver.
+
+After you download and install the gllin_1.0+r350-r0_fic-gta01.ipk (or similar), it creates the folder 'gllin' in the root home. This folder contains the executable with the same name which starts the driver.
 
 To get the output of this driver, read the file /tmp/nmeaNP (it is actually a pipe, not a file). The simplest way is to open another ssh connection to the phone and use cat:
  cat /tmp/nmeaNP
