*Empty MediaWiki Message*

--- a/Neo_FreeRunner_GPS.mw
+++ b/Neo_FreeRunner_GPS.mw
@@ -61,6 +61,18 @@ Here is a simple perl skript doing the same:
 
 <pre>
 #!/usr/bin/perl -wT
+#
+# ublox AssistNow Online almanach downloader for Neo Freerunner
+#
+# v0.1
+#
+# Wilfried Klaebe <wk-openmoko@chaos.in-kiel.de>
+#
+# Usage:
+#
+# agps-alm.pl > /dev/ttySAC1
+#
+
 use strict;
 use IO::Socket::INET;
 use vars qw(%h);
