--- a/Neo_FreeRunner_GPS.mw
+++ b/Neo_FreeRunner_GPS.mw
@@ -18,6 +18,71 @@ echo 0 > /sys/class/i2c-adapter/i2c-0/0-0073/neo1973-pm-gps.0/pwron &&
 sleep 1s && echo 1 > /sys/class/i2c-adapter/i2c-0/0-0073/neo1973-pm-gps.0/pwron && stty -F /dev/ttySAC1 -echo && cat -u /dev/ttySAC1 | grep -v ^$
 </pre>
 
+== Low level access ==
+
+There is no userland driver required for the GTA02, the driver is built into the kernel.
+
+To turn on the GPS, echo 1 to the sys file: 
+
+ echo 1 > /sys/devices/platform/s3c2440-i2c/i2c-adapter/i2c-0/0-0073/neo1973-pm-gps.0/pwron
+
+To read from the GPS, simply read /dev/ttySAC1. Use the gpspipe command like this:
+
+ gpspipe -r 127.0.0.1 2947
+
+You will find gpspipe in the package gps-utils. You can also just "cat /dev/ttySAC1" but it produces the unknown msg*58; This doesn't happen with gpspipe.
+ 
+Before getting a fix, the GPS spits out lots of "$GPTXT,01,01,01,NMEA unknown msg*58", though these stop once a fix is obtained. 
+
+A position without a fix looks like this:
+ $GPGGA,235946.99,,,,,00,00,5.0,,M,0.0001999,M,0.0020199,*57
+
+One with a fix:
+ $GPGGA,065852.00,5613.022527,N,00306.725890,W,1,05,0.5,158.0,M,0.277000,M,-0.010 0515,*7A
+
+(The given position is in central Scotland.)
+
+--[[User:Speedevil|Speedevil]] 11:52, 7 April 2008 (CEST)
+
+If you are having GPS problems with your Freerunner, please document them on the page [[GPS Problems]]. [[FreeRunner GPS antenna repair SOP]] documents a possible solution.
+
+In Openmoko projects, there is a GPS test program called '''agpsui''' that provides graphical and text dump of GPS information. See [[Howto Test Your GPS with agpsui]]. The project is called [http://svn.projects.openmoko.org/svnroot/openmoko-agpsui Openmoko AGPS UI project].
+
+== Using GPS ==
+
+Aside from accessing the GPS data in applications programs running directly on the smartphone,
+you can also access the GPS data stream from another gadget such as a laptop.
+
+Here are a couple ways to do that. You can use a network connection to pull data from the gpsd daemon, or you can make the smartphone appear to be a generic Bluetooth-connected GPS receiver.
+
+Using gpsd requires a program that understands its protocol, such as GPSdrive.
+Using Bluetooth would allow using just about any program that understands the NMEA protocol.
+
+=== Using gpsd with a network connection ===
+
+This procedure depends upon being able to set up a network connection between your Neo and your laptop. The connection can be over either WiFi or USB cable.
+
+First be sure you have gpsd installed. Some Neo Freerunner images don't have gpsd, they use a different GPS stack called gypsy. 
+
+# On host type: '''nc -vvn -l -p 5000 > /tmp/nmeaNP''' (Host starts listening on port 5000 for GPS-signals and sends them to /tmp/nmeaNP)
+# On the Neo type:   '''nc 192.168.0.200 5000 < /dev/ttySAC1''' (Signals from device will be send to port 5000 on host.) If your host is connected to the neo via wifi, change the IP address in the command to the one of the host. 
+# On the host PC install GPSD, your GPS is attached as /tmp/nmeaNP 
+# start gpsd on host with: '''gpsd -p /tmp/nmeaNP'''
+# run your application! I used gpsdrive and it works better than my stand-alone GPS. 
+
+Tested with RoadNav. Works great!
+
+If you have an unlimited [[GPRS]] data package you could make your gpsd service accessible over the Internet. This opens up many possibilities. For example, you could implemented AVL (Automatic Vehicle Location) by having a web server somewhere query your gpsd server for your position and write it to a KML file which would then display your location on a Google map.
+
+=== Bluetooth GPS relay ===
+
+Here is how to make your smartphone appear to be a Bluetooth GPS.
+
+#Power up the bluetooth radio
+#Ensure [http://wiki.openmoko.org/wiki/Gpsd#GPS_on_GTA02 gpsd] is running and the gps-utils package is installed
+#Run '''sdptool add SP'''
+#Run '''rfcomm -r watch 0 1 sh -c "gpspipe -r >/dev/rfcomm0" &'''
+
 == GTA02 GPS Hardware Assist Feature ==
 
 GTA02 is using the [[u-blox ANTARIS 4 ATR0635]] hardware and could use [http://www.u-blox.com/services/assistnow_online.html u-blox AssistNow Online] GPS (A-GPS) servces. GTA02 hardware design does not comply with official Assist Offline service requirement.
