*Empty MediaWiki Message*

--- a/Neo_FreeRunner_GPS.mw
+++ b/Neo_FreeRunner_GPS.mw
@@ -301,5 +301,7 @@ for d in sys.argv[1:]:
 sys.stdout.write(chr(cs0)+chr(cs1))
 </pre>
 
+{{GPS applications}}
+
 [[category:GPS]]
 [[category:GTA02 Hardware]]
