*Empty MediaWiki Message*

--- a/Neo_1973_GPS.mw
+++ b/Neo_1973_GPS.mw
@@ -1,3 +1,4 @@
+{{Box}}
 See [[GTA02_GPS|Here]] For information about the GPS in the Neo FreeRunner
 
 The smartphones contain an integrated GPS receiver. The devices used are marketed as Assisted GPS ('AGPS'). Performance requirements are defined in GSM/GPRS 3GPP TS 25.171, CDMA 3GPP2 C.S0036-0. There is some [[Hardware:AGPS | discussion]] available as to what significance that "A" might have.
