*Empty MediaWiki Message*

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -1,4 +1,4 @@
-{{Box}}
+{{Neo1973}}
 
 [[Openmoko]] is a software distribution stack that sits on top of a [[hardware]] platform.  The [[Neo1973]] phone is the first hardware platform to take advantage of Openmoko.  You can find specifics of the [[:Category:Neo1973 Hardware | Neo1973 Hardware]] by reviewing this introduction page and the pages in the category as shown at the bottom of this page.
 
