*Empty MediaWiki Message*

--- a/GTA01:Neo_1973.mw
+++ b/GTA01:Neo_1973.mw
@@ -1,4 +1,4 @@
-{{Box}}
+{{Neo1973}}
 
 The [[Neo 1973 hardware|Neo 1973]] is the first phone designed to run [[Openmoko]].
 It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the [[Openmoko]] project.
