--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -81,9 +81,11 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | NXP Nexperia system solution 9100 || The introduction indicates it runs open OS || NA || Highly integration solution || [http://www.nxp.com/acrobat_download/literature/9397/75014596.pdf]
 |-
-| Freescale i.MX Products (AP) || Full documentation appears to be on Web || ? || Looks good || [http://www.freescale.com/files/32bit/doc/data_sheet/MCIMX31C.pdf?fsrch=1&WT_TYPE=Data%20Sheets&WT_VENDOR=FREESCALE&WT_FILE_FORMAT=pdf&WT_ASSET=Documentation i.MX]
+| Freescale i.MX Products || Full documentation appears to be on Web || ? || Looks good || [http://www.freescale.com/files/32bit/doc/data_sheet/MCIMX31C.pdf?fsrch=1&WT_TYPE=Data%20Sheets&WT_VENDOR=FREESCALE&WT_FILE_FORMAT=pdf&WT_ASSET=Documentation i.MX]
 |-
 
+| ATMEL AT91RM9200 || Full documentation appears to be on Web || ? || Provide Free BSP for Linux development|| [http://www.atmel.com/dyn/products/Product_card.asp?part_id=2983 AT91RM9200]
+|-
 |}
 
 '''Audio'''
