/* Things to know */

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -43,9 +43,12 @@ Press "remove" to close currently focused application.
 ''' Configuring Om 2008.8 '''
 
 Follow this [[http://support.microsoft.com/kb/306126 guide (Windows Users)]]to share your internet with your phone.
+
+On a Linux host to share your internet connection follow this [[USB_Networking|Guide]]
+
 *If you are also behind a router you may have to change your LAN IP range in your router to avoid using 192.168.0.* as this is the same IP range as what your phone and ICS uses. (If you don't there will be an IP conflict)
 
-After you install and run [[http://wiki.openmoko.org/wiki/Om2008.8#Download Om 2008.8 ]] for the first time you have to restart to get the USB working. Once you have done that you have to ssh into your phone (192.168.0.202) to edit your /etc/network/interfaces so you can access the internet through USB to install software and updates. On a Linux host to share your internet connection follow this [[USB_Networking|Guide]]
+After you install and run [[http://wiki.openmoko.org/wiki/Om2008.8#Download Om 2008.8 ]] for the first time you have to restart to get the USB working. Once you have done that you have to ssh into your phone (192.168.0.202) to edit your /etc/network/interfaces so you can access the internet through USB to install software and updates. 
 
 Edit the USB section to look like this:
 
