--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -28,6 +28,25 @@ Here you can find pre-built kernels and root file systems.
 
 ==Unofficial builds==
 
+=== OM 2008.8 / ASU by zecke ===
+<pre>
+development/unstable trees:
+	http://people.openmoko.org/~zecke/om2008.8-dev/all
+	http://people.openmoko.org/~zecke/om2008.8-dev/armv4t
+	http://people.openmoko.org/~zecke/om2008.8-dev/i686
+	http://people.openmoko.org/~zecke/om2008.8-dev/neo1973
+	http://people.openmoko.org/~zecke/om2008.8-dev/om-gta02
+
+testing feeds:
+	http://people.openmoko.org/~zecke/om2008.8-testing/all
+	http://people.openmoko.org/~zecke/om2008.8-testing/armv4t
+	http://people.openmoko.org/~zecke/om2008.8-testing/i686
+	http://people.openmoko.org/~zecke/om2008.8-testing/neo1973
+	http://people.openmoko.org/~zecke/om2008.8-testing/om-gta02
+</pre>
+
+More details from http://lists.openmoko.org/pipermail/community/2008-August/026491.html
+
 === Angstrom Repository ===
 
 Angstrong is the base distribution of OpenMoko Linux distribution. It contains the basic set of Linux applications and they should be compatible with OpenMoko. [http://www.angstrom-distribution.org/repo/ The repository package listing].
