/* Chip Scouting */ mobile itx added

--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -86,7 +86,10 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 
 | ATMEL AT91RM9200 || Full documentation appears to be on Web || ? || Provide Free BSP for Linux development|| [http://www.atmel.com/dyn/products/Product_card.asp?part_id=2983 AT91RM9200]
 |-
+| Via mobile ITX || Official presentation of platform expected on Wednesday. || ? || ? || http://www.youtube.com/watch?v=K0e0CiHKDvg&feature=related
 |}
+
+
 
 '''Audio'''
 {|border=1 cellspacing=0
