--- a/Openmoko_Local_Groups:_Rülzheim.mw
+++ b/Openmoko_Local_Groups:_Rülzheim.mw
@@ -9,7 +9,7 @@
 |-
 |[[User:axel.sauerhoefer| Axel Sauerhöfer]]
 |Strong C++ knowledge, BOOST, STL, QT
-|
+|Qtopia Image
 |Rülzheim
 |[[ Image:Moko.jpg |center]]
 |Maybe develop some user apps
