*Empty MediaWiki Message*

--- a/Download.mw
+++ b/Download.mw
@@ -10,9 +10,43 @@ In most cases you will download a Root FileSystem and a Kernel to flash into you
 
 If you want to install a system to a microSD card, see [[Booting from SD]].
 
-== Openmoko 2007.2 images (GTK) ==
+=== Om 2008.8 images (ASU) ===
+{{Main|Om 2008.8}}
 
-=== Neo FreeRunner ===
+==== Neo FreeRunner ====
+Latest stable release: 
+http://downloads.openmoko.org/releases/Om2008.8/ 
+
+There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
+
+There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it. 
+
+==== Neo 1973 ====
+There are no builds yet
+
+==== Unofficial builds by zecke ====
+<pre>
+development/unstable trees:
+	http://people.openmoko.org/~zecke/om2008.8-dev/all
+	http://people.openmoko.org/~zecke/om2008.8-dev/armv4t
+	http://people.openmoko.org/~zecke/om2008.8-dev/i686
+	http://people.openmoko.org/~zecke/om2008.8-dev/neo1973
+	http://people.openmoko.org/~zecke/om2008.8-dev/om-gta02
+
+testing feeds:
+	http://people.openmoko.org/~zecke/om2008.8-testing/all
+	http://people.openmoko.org/~zecke/om2008.8-testing/armv4t
+	http://people.openmoko.org/~zecke/om2008.8-testing/i686
+	http://people.openmoko.org/~zecke/om2008.8-testing/neo1973
+	http://people.openmoko.org/~zecke/om2008.8-testing/om-gta02
+</pre>
+
+More details from http://lists.openmoko.org/pipermail/community/2008-August/026491.html
+
+=== Om 2007.2 images (GTK) ===
+{{Main|Om 2007.2}}
+
+==== Neo FreeRunner ====
 
 Latest stable Om 2007.2 release:
 http://buildhost.openmoko.org/releases/Freerunner/
@@ -22,14 +56,14 @@ Daily builds: http://buildhost.openmoko.org/daily/freerunner/
 * Root FS files are like: Openmoko-'''openmoko-devel-image'''-glibc-ipk-P1-Snapshot-20080804-'''om-gta02.rootfs.jffs2'''
 * Kernel files are like:  '''uImage'''-2.6.24+git27+1a95efdc23966343a3b432ceef2f6c24dc0e2052-r2-'''om-gta02.bin'''
 
-=== Neo 1973 ===
+==== Neo 1973 ====
 
 Daily builds: http://buildhost.openmoko.org/daily/neo1973/ 
 
 * Root FS files are like: Openmoko-'''openmoko-devel-image'''-glibc-ipk-P1-Snapshot-20080802-'''om-gta01.rootfs.jffs2'''
 * Kernel files are like: '''uImage'''-2.6.24+git27+1a95efdc23966343a3b432ceef2f6c24dc0e2052-r2-'''om-gta01.bin'''
 
-=== ScaredyCat images ===
+==== ScaredyCat images ====
 
 These are usable images created by [http://blog.automated.it/category/openmoko/ Andy Powell] based on the 2007.2 software stack.
 
@@ -38,27 +72,19 @@ ScaredyCat images: http://buildhost.automated.it/OM2007.2/
 For Neo FreeRunner images please scroll down on that link.
 
 
-== Openmoko 2008.8 images (ASU) ==
-
-Latest stable [[Om 2008.8]] release: http://downloads.openmoko.org/releases/Om2008.8/ (These images are for the Freerunner only).
-
-There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
-
-There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it. 
-
-== buildhost.openmoko.org Images ==
+=== buildhost.openmoko.org Images ===
 
 '''Warning:''' 
 '''This is not Om 2008.8 / ASU!'''
 
-=== Neo FreeRunner ===
+==== Neo FreeRunner ====
 
 Daily builds: http://buildhost.openmoko.org/daily/freerunner/ 
 
 * Root FS files are like: Openmoko-'''openmoko-qtopia-x11'''-image-glibc-ipk-P1-Snapshot-YYYYMMDD-'''om-gta02.rootfs.tar.gz'''
 * Kernel files are like:  '''uImage'''-2.6.24+git27+1a95efdc23966343a3b432ceef2f6c24dc0e2052-r2-'''om-gta02.bin'''
 
-=== Neo 1973 ===
+==== Neo 1973 ====
 
 Note that the images for the 1973 are a hybrid between 2008.8 and 2008.2, and there are no current plans to release the full 2008.8 for the 1973.
 
@@ -67,7 +93,8 @@ Daily builds: http://buildhost.openmoko.org/daily/neo1973/
 * Root FS files are like: Openmoko-'''openmoko-qtopia-x11'''-image-glibc-ipk-P1-Snapshot-YYYYMMDD-'''om-gta01.rootfs.tar.gz'''
 * Kernel files are like:  '''uImage'''-2.6.24+git27+1a95efdc23966343a3b432ceef2f6c24dc0e2052-r2-'''om-gta01.bin'''
 
-==FSO images (freesmartphone.org)==
+=== FSO images (freesmartphone.org) ===
+{{Main|FSO}}
 
 Milestone 1 is here: http://downloads.openmoko.org/framework/milestone1/ 
 
@@ -81,22 +108,23 @@ Learn more at its wiki page: [[OpenmokoFramework]]
 
 The file system will be in a jffs2 "summary" file. A file with the extension ".jffs2.summary" can be flashed to the FreeRunner just like an ordinary jffs2 file.
 
-==Qtopia images==
+=== Qtopia images ===
+{{Main|qtopia}}
 
 Images are available on the [http://www.qtopia.net/modules/mydownloads/index.php Qtopia.net images] page, make sure your browser sends referer Header when downloading. (Note: direct linking to the files does not work.)
 
-===Neo FreeRunner===
+==== Neo FreeRunner ====
 
 * Find "Qtopia flash image for FIC Neo Freerunner (gta02)" on [http://www.qtopia.net/modules/mydownloads/index.php Qtopia.net images] (a tarball with both a rootfs and kernel)
 * The "Developer root filesystem for FIC Neo Freerunner (gta02)" file is a  barebones root filesystem created from the 'FSO' image available from Openmoko.
 
-===Neo 1973===
+==== Neo 1973 ====
 
 * Find "Qtopia flash image for FIC Neo 1973 (gta01)" on [http://www.qtopia.net/modules/mydownloads/index.php Qtopia.net images] (a tarball with both a rootfs and kernel)
 
 *A Neo 1973 image is also available from here [http://buildhost.automated.it/OM2007.2/openmoko-qtopia-image-om-gta01.tar.gz openmoko-qtopia-image-om-gta01.tar.gz]
 
-===More Qtopia downloads ===
+==== More Qtopia downloads ====
 
 You might also try [http://trolltech.com/developer/downloads/qtopia/qtopia-source-gpl ftp.trolltech.com snapshots]
 
@@ -104,12 +132,13 @@ Addtional packages can be added from the Trolltech feed for this image, found at
 http://qtopia.net/packages/feed/4.3.2/neo/
 To get to these packages, you need to add the feed as a source in the Qtopia package manager.
 
-==SHR images (Stable Hybrid Release) ==
+=== SHR images (Stable Hybrid Release) ===
+{{Main|SHR}}
 
 There are no downloadable images yet.
 
 
-==Debian images ==
+=== Debian images ===
 
 See [[Debian]].
 
