*Empty MediaWiki Message*

--- a/Download.mw
+++ b/Download.mw
@@ -142,6 +142,9 @@ There are no downloadable images yet.
 
 See [[Debian]].
 
+== Community repository ==
+{{Main|CommunityRepository}}
+http://downloads.openmoko.org/repository/Multiverse/
 
 == Other downloads ==
 
