*Empty MediaWiki Message*

--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -1,51 +1,4 @@
-Here you can find pre-built kernels and root file systems.
-
-==Official downloads==
-
-===Recent/latest builds===
-* Framework Testing Images (FSO)
-:http://downloads.openmoko.org/framework/
-* OM2007.2 
-:http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/images/neo1973/?C=M;O=D
-* OM2007.1 (Obsolete)
-:http://buildhost.openmoko.org/OM2007.1/tmp/deploy/images/?C=M;O=D
-
-* OM2008.8 ASU development release (note that Daily Build 200808 is the '''Aug 2008''' daily snapshot of OM2007)
-:http://downloads.openmoko.org/releases/Om2008.8/
-
-===Snapshots (obsolete directory)[http://downloads.openmoko.org/obsolete/snapshots/]===
-* 2007.11 - the latest (2nd Dec) snapshot ([http://lists.openmoko.org/pipermail/community/2007-December/011980.html from Mickey])
-:http://downloads.openmoko.org/obsolete/snapshots/2007.11/images/
-* 2007.08 snapshot, as announced by Sean on August 19
-:http://downloads.openmoko.org/obsolete/snapshots/2007.08/images/
-
-===Daily===
-* Unstable Daily-builds
-:http://buildhost.openmoko.org/daily/
-
-===[[CommunityRepository|Community repository]]===
-:http://downloads.openmoko.org/repository/Multiverse/
-
-==Unofficial builds==
-
-=== OM 2008.8 / ASU by zecke ===
-<pre>
-development/unstable trees:
-	http://people.openmoko.org/~zecke/om2008.8-dev/all
-	http://people.openmoko.org/~zecke/om2008.8-dev/armv4t
-	http://people.openmoko.org/~zecke/om2008.8-dev/i686
-	http://people.openmoko.org/~zecke/om2008.8-dev/neo1973
-	http://people.openmoko.org/~zecke/om2008.8-dev/om-gta02
-
-testing feeds:
-	http://people.openmoko.org/~zecke/om2008.8-testing/all
-	http://people.openmoko.org/~zecke/om2008.8-testing/armv4t
-	http://people.openmoko.org/~zecke/om2008.8-testing/i686
-	http://people.openmoko.org/~zecke/om2008.8-testing/neo1973
-	http://people.openmoko.org/~zecke/om2008.8-testing/om-gta02
-</pre>
-
-More details from http://lists.openmoko.org/pipermail/community/2008-August/026491.html
+For information about the official downloads and distributions, see [[Downloads]]
 
 === Angstrom Repository ===
 
