*Empty MediaWiki Message*

--- a/Download.mw
+++ b/Download.mw
@@ -1,5 +1,7 @@
 This page lists various images you can try out on your Openmoko supported smartphone and some other downloads. Note however, that some of these are works in progress and may not have even released any files yet. Nothing is guaranteed to work. Proceed at your own risk.
 
+Unofficial users repositories can be found [[Users Repositories|here]]
+
 == Distributions and installation ==
 
 See [[Distributions]] for description of the images downloadable here.
