--- a/Om_2008.8%2Fcs.mw
+++ b/Om_2008.8%2Fcs.mw
@@ -56,12 +56,75 @@ You can see a list of available and planned features at [[Openmoko2008.8 Feature
 == Stažení & Instalace ==
 Doporučujeme "flashnout" následující obrazy.  Pokud nevíte jak "flashnout" vaše zařízení, tak se podívejte na [[Flashing the Neo FreeRunner]].
 
-=== Doporučené obrazy ===
+=== Share ===
+* share your locations  ([[Om2008.8_Locations|Locations]])
+:you can use '''Locations''' to save your favorite spots and even send it to friends via sms.  How cool is that?!
+* share your applications ([[Om2008.8_Installer|Installer]])
+:share your ideas with the world by adding packages to the [http://wiki.openmoko.org/wiki/CommunityRepository Community Repository].  It is a great database for all things openmoko and can easily be accessed by any user through the [[Om2008.8 Installer|Installer]].
 
-* U-Boot [[link version]]
-* Kernel [[link version]]
-* Rootfs [[link version]]
+=== Om 2008.8 Guide ===
+A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 
+= Installing =
+
+If you want install this software distribution to your device, you have to follow these steps:
+* Download the recent image of Om2008.8 on the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page
+* [[Flashing the Neo FreeRunner|Flash]] to your Neo FreeRunner
+
+= Known Issues =
+'''GSM'''
+
+* [http://docs.openmoko.org/trac/ticket/1766 Neni možné vlat nebo přijmout SMS]
+* [http://docs.openmoko.org/trac/ticket/1662 GSM Nefunguje dobře po X hodinách]
+* [https://docs.openmoko.org/trac/ticket/1765 Nezobrazí se Pin Dialog - GSM je nepoužitelné]
+
+'''WiFi'''
+ 
+* [http://docs.openmoko.org/trac/ticket/1625 WiFi Se dokáže připojí pouze jednou]
+
+'''Kvalita Zvuku'''
+
+* [http://docs.openmoko.org/trac/ticket/1721 QT-Dialer Sometimes can not hear anything durring connecting call]
+* [http://docs.openmoko.org/trac/ticket/1640 Improve overall audio]
+
+'''Systémový Software''' 
+
+* [http://docs.openmoko.org/trac/ticket/1736 Pokud se v průběhu bootu nedotkente obrazovky, telefon usne a už se nikdy neprobudí.]
+* [http://docs.openmoko.org/trac/ticket/1597 After long suspend, kernel thread events]
+* [http://docs.openmoko.org/trac/ticket/1315 xglamo: performance decreases after a while]
+* [http://docs.openmoko.org/trac/ticket/1682 Neo turns off before reaching x]
+
+'''Networking'''
+* No Updates/Installation are possible or pings to domains because dns is not working. This problem occurs because the /etc/resolv.conf is empty by default.Add this line in /etc/network/interfaces:
+
+
+ up echo nameserver 192.168.0.200 >/etc/resolv.conf
+This is to be inserted below gateway address and above the bluetooth networking. After this rebooting is required. Then go to /etc/resolv.conf and fill it manually by just using the content of this file on your local machine, or DNS address.
+
+This should solve most off your moko side networking issues. If you need any other help please refer to [[USB Networking]]
+
+{{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used }}
+
+* Usb-networking will not work until rebooted after initial boot.
+
+'''Použitelnost''' 
+* Pin-Dialog defaultně zobrazuje klavesnici s písmenya. Je třeba přejet prstem nahoru a dolů po obrazovce aby se klávesnice přepnula na numerickou.
+* The installer app doesn't release administrative rights which results in not being able to use opkg. Sollution: run "killall packagekitd" (on the freerunner or when ssh'ed in).
+
+== Aktualizace ==
+
+There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
+
+{{note|There are *NO* updates available for 2008.8 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.8 and will corrupt your software configuration if you use it.}}
+
+'''More details about the official updates being set-up here : http://lists.openmoko.org/pipermail/community/2008-August/026515.html'''
+
+In the meantime, you may try at your own risk [[Repositories#OM_2008.8 / ASU by zecke]].
+
+
+== Poznámečka ==
+
+Akutalizováno --[[User:Fox|Fox]] 10:42, 16 August 2008 (UTC)
+Případné chyby mi nahlaste nebo ještě lépe je rovnou opravte.
 [[Category:Openmoko]]
-[[Category:Distributions]]
 [[Category:Om 2008.8]]
