--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -52,6 +52,7 @@ Either way you create your own meaning. It's about you.
 === Om 2008.8 Guide ===
 A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 
+<span id="Flash_Om_2008.8_images"></span>
 = Installing =
 
 If you want install this software distribution to your device, you have to follow these steps:
