--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -107,7 +107,7 @@ There should be some official updates for 2008.8 setup soon, but in the meantime
 
 '''More details about the official updates being set-up here : http://lists.openmoko.org/pipermail/community/2008-August/026515.html'''
 
-In the meantime, you may try at your own risk [[Repositories#OM_2008.8 / ASU by zecke]].
+In the meantime, you may try at your own risk [[Download#Unofficial_builds_by_zecke]].
 
 [[Category:Openmoko]]
 [[Category:Om 2008.8]]
