--- a/Userspace_root_image.mw
+++ b/Userspace_root_image.mw
@@ -10,7 +10,7 @@ is a typical command.  It creates a FS image for our erase block size of 16k, pa
 
 === Prebuilt ===
 
-See [[Repositories]] and update the list if you have more information.
+See [[Downloads]] and update the list if you have more information.
 
 === OpenEmbedded ===
 
